fix(board): adjust subtask and assigned avatars layout to prevent overflow issues

--- a/css/pages/board/core.css
+++ b/css/pages/board/core.css
@@ -263,6 +263,7 @@
     color: #42526E;
     font-weight: 400;
     font-size: 20px;
+    min-width: fit-content;
 }
 
 .detailed-task-content {
@@ -293,6 +294,7 @@
 .detailed-task-content h2 {
     font-size: 48px;
     font-weight: 700;
+    word-break: break-word;
 }
 
 .detailed-task-desc {
@@ -329,6 +331,8 @@
 
 .detailed-task-assigned-avatars {
     gap: 8px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .detailed-task-attachments {
@@ -337,7 +341,6 @@
     gap: 8px;
 }
 
-#detailed-task-attachments-list .attachment-item {}
 
 .download-attachment-btn {
     all: unset;
@@ -390,7 +393,6 @@
     display: flex;
     align-items: center;
     gap: 16px;
-    height: 32px;
     padding: 4px 16px;
     font-size: 16px;
     border-radius: 10px;
@@ -403,8 +405,8 @@
 }
 
 .detailed-task-subtask-item div {
-    height: 24px;
-    width: 24px;
+    min-height: 24px;
+    min-width: 24px;
     border-radius: 50%;
 }
 
